# exam-viewer

./: .gitignore  Cargo.toml  README.md  scraper.sh
src/: main.rs
src/lib/: filters.rs  helpers.rs  mod.rs  scraper.rs  template.rs
src/lib/filters/: filters.rs  mod.rs  util.rs
src/scripts/: navbar.js
src/styles/: app.css  subject.css
src/templates/: entry.hbs  exam_list.hbs  index.hbs  navbar.hbs
src/templates/error/: page_not_found.hbs
src/templates/exam/: subject.hbs  subject_full.hbs  subject_list.hbs
